[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainNavigation/Worldmap/WorldMap.gd" type="Script" id=1]
[ext_resource path="res://MainNavigation/Worldmap/UIMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://SPRITES/Backgrounds/worldmap.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Cinzel-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="WorldMap" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 631.667, 372.906 )
scale = Vector2( 0.661537, 0.661537 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="UIMap" parent="." instance=ExtResource( 2 )]

[node name="ElarDesert" type="Area2D" parent="."]

[node name="Collision" type="CollisionPolygon2D" parent="ElarDesert"]
polygon = PoolVector2Array( 555.623, 328.244, 563.965, 319.568, 574.978, 324.24, 583.32, 324.24, 589.661, 316.23, 612.02, 316.23, 623.366, 311.892, 628.371, 302.215, 634.378, 300.546, 654.401, 302.215, 656.069, 299.211, 667.415, 296.875, 670.419, 289.2, 679.763, 288.533, 693.445, 283.193, 700.453, 270.846, 710.13, 265.507, 720.142, 255.829, 722.478, 243.815, 732.155, 236.14, 735.826, 220.789, 730.487, 214.449, 732.489, 204.104, 726.482, 200.767, 726.148, 197.096, 720.241, 192.99, 713.094, 191.308, 710.361, 193.2, 705.105, 189.836, 699.785, 191.089, 697.449, 195.761, 694.112, 199.766, 689.107, 199.766, 683.767, 205.439, 672.421, 207.775, 670.629, 201.398, 665.163, 200.558, 659.406, 202.769, 656.576, 196.458, 651.731, 193.425, 645.391, 195.427, 644.056, 201.101, 638.78, 204.017, 633.377, 204.771, 621.246, 206.003, 613.223, 199.867, 608.268, 204.351, 602.242, 204.175, 599.25, 200.868, 589.626, 204.587, 583.963, 196.564, 576.884, 194.912, 569.569, 199.395, 561.782, 191.372, 561.074, 185.709, 565.794, 179.574, 561.61, 170.157, 554.995, 169.054, 553.735, 160.55, 549.011, 156.298, 541.961, 158.101, 539.561, 166.85, 543.656, 172.834, 545.703, 177.874, 545.736, 181.698, 539.129, 186.181, 528.222, 184.961, 519.875, 189.371, 518.3, 200.867, 525.544, 203.86, 527.749, 210.159, 533.938, 214.969, 534.882, 219.689, 530.634, 224.172, 524.263, 223.7, 512.937, 227.948, 507.509, 225.352, 502.554, 225.824, 496.251, 222.444, 488.692, 223.861, 486.036, 229.127, 480.845, 227.948, 477.552, 213.453, 470.265, 212.207, 465.035, 214.969, 462.675, 222.048, 455.934, 221.026, 444.506, 224.408, 434.123, 219.453, 435.303, 214.733, 442.382, 209.542, 446.616, 211.509, 449.933, 209.542, 450.877, 204.115, 443.562, 193.968, 445.214, 188.069, 447.809, 186.417, 447.573, 181.934, 444.506, 176.271, 446.63, 168.484, 450.877, 165.888, 451.349, 159.989, 448.281, 156.449, 441.202, 155.505, 435.539, 146.538, 436.247, 139.223, 431.292, 127.189, 424.25, 121, 417.369, 120.346, 413.358, 107.132, 399.436, 111.851, 390.25, 106.25, 383.39, 109.963, 375.367, 118.93, 358.377, 125.065, 351.77, 120.11, 340.208, 119.638, 339.028, 126.717, 333.5, 123.75, 329.25, 127.25, 327.937, 133.324, 330.769, 138.28, 342.095, 140.875, 345.635, 136.864, 357.197, 138.044, 358, 141.75, 357.75, 146.25, 360.029, 151.494, 362.861, 153.853, 363.805, 159.517, 358.141, 167.304, 360.029, 171.315, 356.283, 180.926, 358.849, 187.361, 365.692, 191.137, 366.4, 196.092, 367.816, 204.115, 373.243, 206.003, 374.659, 211.43, 370.884, 214.025, 372.063, 218.273, 376.783, 226.06, 371.356, 234.555, 373.007, 242.814, 375.367, 244.701, 373.007, 248.005, 373.243, 256.264, 367.708, 262.872, 366.164, 270.894, 369.043, 275.22, 370.211, 285.732, 375.217, 287.734, 381.502, 287.176, 382.682, 280.333, 392.121, 281.277, 392.593, 285.76, 395.66, 290.007, 396.875, 309.851, 399.2, 317.852, 406.954, 319.458, 415.01, 319.032, 416.426, 322.571, 422.561, 321.863, 427.988, 325.875, 431.292, 330.358, 436.719, 335.077, 440.022, 342.392, 441.287, 356.153, 444.506, 359.618, 455.776, 358.358, 460.788, 351.831, 468.575, 353.719, 470.895, 362.61, 475.182, 369.765, 482.261, 367.641, 498.779, 363.63, 518.128, 356.786, 528.511, 343.808, 541.253, 330.83 )

[node name="Hover" type="Polygon2D" parent="ElarDesert"]
visible = false
self_modulate = Color( 0.776471, 0.992157, 0.25098, 0.584314 )
polygon = PoolVector2Array( 555.623, 328.244, 563.965, 319.568, 574.978, 324.24, 583.32, 324.24, 589.661, 316.23, 612.02, 316.23, 623.366, 311.892, 628.371, 302.215, 634.378, 300.546, 654.401, 302.215, 656.069, 299.211, 667.415, 296.875, 670.419, 289.2, 679.763, 288.533, 693.445, 283.193, 700.453, 270.846, 710.13, 265.507, 720.142, 255.829, 722.478, 243.815, 732.155, 236.14, 735.826, 220.789, 733.778, 214.784, 735.25, 203.957, 729.364, 200.278, 729.469, 196.179, 721.901, 191.659, 714.438, 190.082, 710.654, 191.974, 707.605, 188.611, 699.722, 187.455, 695.412, 192.185, 694.046, 196.915, 686.688, 197.545, 683.767, 205.439, 674.075, 205.324, 672.183, 200.068, 664.72, 197.966, 660.936, 199.963, 658.308, 195.233, 652.106, 191.239, 643.277, 193.761, 643.277, 199.437, 639.598, 201.855, 633.607, 202.065, 622.675, 204.483, 619.522, 200.068, 611.218, 198.281, 608.268, 204.351, 604.28, 202.906, 599.25, 200.868, 591.877, 202.381, 586.306, 194.287, 574.639, 192.29, 569.909, 196.494, 564.022, 190.608, 563.812, 187.139, 566.86, 179.571, 561.61, 170.157, 554.995, 169.054, 555.824, 159.81, 550.988, 154.449, 541.003, 155.921, 537.849, 165.907, 541.423, 173.265, 545.703, 177.874, 545.736, 181.698, 538.375, 184.091, 528.222, 184.961, 518.322, 188.5, 516.986, 202.086, 523.445, 204.314, 527.749, 210.159, 533.938, 214.969, 534.882, 219.689, 529.458, 221.909, 524.558, 221.686, 513.645, 225.695, 509.19, 222.577, 501.395, 224.136, 495.159, 221.018, 488.692, 223.861, 486.036, 229.127, 480.845, 227.948, 477.552, 213.453, 470.265, 212.207, 465.035, 214.969, 462.864, 219.459, 458.186, 219.013, 448.164, 224.359, 442.818, 219.904, 434.123, 219.453, 437.918, 214.782, 442.373, 211.886, 446.616, 211.509, 449.933, 209.542, 450.877, 204.115, 443.562, 193.968, 447.25, 191.685, 450.028, 188.908, 449.632, 180.375, 444.506, 176.271, 446.63, 168.484, 453.732, 166.228, 453.287, 158.655, 448.281, 156.449, 441.202, 155.505, 441.037, 148.855, 436.805, 145.291, 438.141, 138.832, 432.35, 125.246, 424.25, 121, 417.369, 120.346, 417.873, 110.101, 412.974, 104.31, 399.436, 111.851, 396.492, 104.756, 388.697, 103.865, 383.39, 109.963, 372.66, 116.56, 359.074, 122.574, 351.947, 117.896, 339.92, 117.005, 339.028, 126.717, 332.793, 122.796, 328.115, 124.801, 325.443, 131.037, 328.784, 140.391, 344.48, 143.638, 345.635, 136.864, 355.065, 139.501, 358, 141.75, 355.511, 145.291, 355.733, 151.973, 359.965, 154.2, 361.609, 158.98, 356.401, 163.555, 355.956, 171.128, 356.283, 180.926, 356.624, 189.168, 364.043, 191.849, 362.638, 197.186, 366.291, 206.271, 370.973, 206.926, 371.324, 209.436, 369.542, 213, 369.988, 218.791, 373.997, 225.695, 369.988, 233.936, 370.786, 242.043, 373.876, 244.758, 371.769, 248.19, 370.656, 255.763, 367.708, 262.872, 364.965, 270.689, 367.324, 275.29, 368.504, 285.201, 375.111, 289.331, 381.6, 288.505, 384.55, 282.487, 390.095, 282.251, 390.803, 286.263, 393.753, 290.274, 396.875, 309.851, 396.938, 318.473, 404.843, 320.714, 411.804, 320.124, 413.456, 324.018, 420.771, 323.782, 424.625, 326.5, 427.5, 331.625, 435.125, 336.75, 438, 342.375, 439.75, 357.375, 443.75, 361.625, 455.625, 359.75, 461.25, 353.75, 467, 354.875, 470, 363.875, 473.375, 370.375, 482.261, 367.641, 498.779, 363.63, 518.128, 356.786, 528.511, 343.808, 541.253, 330.83 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="ElarDesert"]
margin_left = 371.652
margin_top = 229.388
margin_right = 708.652
margin_bottom = 279.388
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Elar Desert"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Owlshore" type="Area2D" parent="."]
position = Vector2( 173.576, 188.559 )

[node name="Collision" type="CollisionPolygon2D" parent="Owlshore"]
polygon = PoolVector2Array( 298.424, 183.191, 305.492, 188.888, 322.329, 199.271, 336.079, 213.302, 358.809, 216.95, 396.973, 218.353, 410.442, 220.879, 433.733, 229.578, 448.606, 232.664, 453.657, 238.277, 457.586, 248.94, 463.479, 257.078, 472.178, 261.287, 463.759, 269.144, 461.234, 280.93, 460.392, 298.328, 464.04, 314.885, 471.055, 323.023, 482.28, 322.181, 489.856, 314.885, 496.31, 314.324, 490.979, 328.074, 491.259, 335.37, 497.714, 342.385, 504.448, 355.574, 513.989, 358.38, 522.969, 351.645, 525.495, 362.028, 531.949, 367.641, 539.245, 379.988, 549.347, 384.197, 559.168, 389.528, 567.867, 385.6, 574.322, 385.039, 580.495, 389.528, 583.301, 398.789, 582.179, 411.697, 587.791, 423.202, 589.755, 436.111, 593.684, 447.055, 607.715, 449.861, 617.256, 455.192, 620.343, 473.432, 620.343, 484.096, 631.006, 489.427, 646.72, 484.657, 659.629, 482.131, 665.522, 472.871, 675.904, 475.397, 691.899, 466.978, 689.374, 452.386, 696.67, 448.738, 705.088, 443.407, 705.088, 434.146, 722.206, 434.427, 727.818, 418.993, 724.731, 409.733, 718.838, 407.768, 715.471, 393.176, 702.843, 389.809, 696.95, 387.564, 690.216, 377.462, 675.343, 372.972, 667.205, 357.258, 654.016, 354.452, 642.511, 356.416, 625.955, 369.324, 620.342, 359.783, 609.118, 348.559, 622.307, 341.824, 620.342, 333.686, 628.48, 323.864, 625.674, 316.007, 629.041, 304.502, 621.746, 295.242, 610.521, 287.384, 623.149, 281.492, 620.904, 265.777, 615.853, 256.517, 617.255, 248.66, 631.848, 243.328, 643.353, 234.348, 648.684, 228.736, 641.388, 217.792, 656.542, 208.532, 662.435, 195.343, 672.537, 193.378, 686.287, 194.781, 701.721, 196.465, 713.226, 189.73, 721.364, 181.873, 720.522, 171.21, 728.941, 163.352, 720.803, 152.689, 715.752, 138.658, 710.7, 131.924, 702.001, 132.204, 693.302, 128.556, 681.516, 128.276, 678.149, 138.939, 676.465, 149.041, 664.68, 151.847, 657.384, 147.638, 652.332, 140.903, 665.241, 140.061, 671.695, 131.643, 688.532, 121.541, 687.69, 110.877, 678.991, 107.229, 668.047, 105.546, 661.032, 110.035, 661.312, 114.806, 654.578, 114.806, 647.843, 109.755, 637.46, 110.597, 629.042, 115.648, 629.042, 122.663, 621.745, 127.153, 614.169, 122.102, 601.261, 122.383, 604.347, 109.755, 610.521, 105.265, 607.715, 90.9536, 602.944, 85.6219, 602.102, 77.2035, 597.051, 74.3973, 595.087, 57.5604, 585.266, 51.6675, 582.74, 47.4583, 586.669, 37.3561, 579.373, 27.5345, 565.061, 27.5345, 565.703, 38.3313, 560.512, 48.9499, 553.197, 56.5009, 549.893, 64.5238, 544.23, 75.8503, 533.174, 83.6908, 530.674, 90.6908, 525.174, 97.4408, 513.924, 101.441, 503.924, 104.191, 499.924, 109.691, 487.924, 113.691, 479.174, 116.691, 461.924, 115.191, 456.174, 123.691, 442.924, 129.941, 422.674, 131.941, 409.924, 139.941, 392.924, 137.691, 384.924, 142.191, 368.674, 147.941, 359.924, 157.191, 348.674, 171.191, 327.674, 178.941 )

[node name="Hover" type="Polygon2D" parent="Owlshore"]
visible = false
self_modulate = Color( 0.996078, 1, 0.337255, 0.54902 )
polygon = PoolVector2Array( 297.915, 181.592, 305.492, 188.888, 322.329, 199.271, 336.079, 213.302, 358.809, 216.95, 396.973, 218.353, 410.442, 220.879, 433.733, 229.578, 448.606, 232.664, 453.657, 238.277, 457.586, 248.94, 463.479, 257.078, 472.178, 261.287, 463.759, 269.144, 461.234, 280.93, 460.392, 298.328, 464.04, 314.885, 471.055, 323.023, 482.28, 322.181, 489.856, 314.885, 496.31, 314.324, 490.979, 328.074, 491.259, 335.37, 497.714, 342.385, 504.448, 355.574, 513.989, 358.38, 522.969, 351.645, 525.495, 362.028, 531.949, 367.641, 539.245, 379.988, 549.347, 384.197, 559.168, 389.528, 567.867, 385.6, 574.322, 385.039, 580.495, 389.528, 583.301, 398.789, 582.179, 411.697, 587.791, 423.202, 589.755, 436.111, 593.684, 447.055, 607.715, 449.861, 617.256, 455.192, 620.343, 473.432, 620.343, 484.096, 631.006, 489.427, 646.72, 484.657, 659.629, 482.131, 665.522, 472.871, 675.904, 475.397, 691.899, 466.978, 689.374, 452.386, 696.67, 448.738, 705.088, 443.407, 705.088, 434.146, 722.206, 434.427, 727.818, 418.993, 724.731, 409.733, 718.838, 407.768, 715.471, 393.176, 702.843, 389.809, 696.95, 387.564, 690.216, 377.462, 675.343, 372.972, 667.205, 357.258, 654.016, 354.452, 642.511, 356.416, 625.955, 369.324, 620.342, 359.783, 609.118, 348.559, 622.307, 341.824, 620.342, 333.686, 628.48, 323.864, 625.674, 316.007, 629.041, 304.502, 621.746, 295.242, 610.521, 287.384, 623.149, 281.492, 620.904, 265.777, 615.853, 256.517, 617.255, 248.66, 631.848, 243.328, 643.353, 234.348, 648.684, 228.736, 641.388, 217.792, 656.542, 208.532, 662.435, 195.343, 672.537, 193.378, 686.287, 194.781, 701.721, 196.465, 713.226, 189.73, 721.364, 181.873, 720.522, 171.21, 728.941, 163.352, 720.803, 152.689, 715.752, 138.658, 710.7, 131.924, 702.001, 132.204, 693.302, 128.556, 681.516, 128.276, 678.149, 138.939, 676.465, 149.041, 664.68, 151.847, 657.384, 147.638, 652.332, 140.903, 665.241, 140.061, 671.695, 131.643, 688.532, 121.541, 687.69, 110.877, 678.991, 107.229, 668.047, 105.546, 661.032, 110.035, 661.312, 114.806, 654.578, 114.806, 647.843, 109.755, 637.46, 110.597, 629.042, 115.648, 629.042, 122.663, 621.745, 127.153, 614.169, 122.102, 601.261, 122.383, 604.347, 109.755, 610.521, 105.265, 607.715, 90.9536, 602.944, 85.6219, 602.102, 77.2035, 597.051, 74.3973, 595.087, 57.5604, 585.266, 51.6675, 582.74, 47.4583, 586.669, 37.3561, 579.373, 27.5345, 565.061, 27.5345, 554.398, 30.9019, 549.908, 44.3715, 542.612, 54.7542, 542.051, 63.4533, 531.107, 72.433, 522.969, 77.7647, 519.321, 87.025, 514.27, 92.0761, 502.203, 94.8823, 494.066, 96.2853, 490.698, 104.423, 476.667, 107.229, 477.79, 109.755, 451.412, 108.632, 445.8, 120.138, 433.733, 123.505, 415.493, 123.224, 407.917, 131.643, 388.554, 126.311, 378.893, 135.587, 361.942, 140.885, 350.552, 153.598, 341.017, 165.517, 322.741, 171.344 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Owlshore"]
margin_left = 354.191
margin_top = 181.816
margin_right = 691.191
margin_bottom = 231.816
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Owlshore"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lowlands" type="Area2D" parent="."]
position = Vector2( -73.7789, 279.388 )

[node name="Collision" type="CollisionPolygon2D" parent="Lowlands"]
polygon = PoolVector2Array( 545.329, 96.188, 566.375, 110.78, 582.651, 125.933, 624.182, 129.862, 657.856, 132.949, 684.795, 141.928, 695.177, 146.979, 699.703, 161.587, 706.059, 170.327, 706.059, 181.452, 694.935, 193.106, 694.405, 198.668, 676.924, 205.29, 676.13, 209.528, 689.903, 215.62, 694.935, 229.922, 690.432, 246.079, 697.849, 254.025, 706.059, 265.679, 703.411, 280.247, 694.14, 285.279, 679.573, 287.133, 674.54, 283.16, 657.854, 285.014, 653.881, 299.052, 643.816, 303.555, 634.016, 302.231, 619.978, 304.614, 610.973, 314.414, 594.286, 326.598, 596.405, 340.106, 593.491, 348.582, 592.432, 362.09, 587.664, 367.917, 581.572, 381.161, 563.297, 387.782, 546.08, 390.166, 540.518, 365.533, 527.275, 365.269, 509.794, 368.182, 489.929, 371.361, 474.037, 371.89, 456.026, 364.739, 442.783, 357.058, 440.134, 337.458, 429.01, 329.247, 424.242, 316.268, 433.248, 306.733, 425.037, 298.522, 424.772, 288.987, 430.069, 281.306, 445.696, 279.187, 441.723, 273.89, 426.626, 269.652, 417.091, 258.528, 419.21, 242.106, 418.415, 225.42, 418.578, 214.594, 412.405, 201.686, 419.139, 192.987, 435.415, 182.604, 434.293, 173.063, 448.043, 169.135, 455.058, 152.298, 465.16, 148.369, 469.65, 146.124, 465.722, 138.547, 471.895, 127.603, 485.365, 129.287, 493.222, 126.762, 497.431, 115.818, 508.656, 113.292, 511.743, 104.874, 523.528, 104.593, 530.263, 107.119, 531.105, 113.011, 538.682, 117.501, 543.733, 116.94, 545.136, 107.68 )

[node name="Hover" type="Polygon2D" parent="Lowlands"]
visible = false
color = Color( 1, 0.933333, 0.207843, 0.541176 )
polygon = PoolVector2Array( 546.61, 91.6623, 574.156, 105.965, 590.313, 119.473, 622.362, 122.652, 656.794, 125.565, 686.989, 134.306, 704.47, 143.046, 699.703, 161.587, 706.059, 170.327, 706.059, 181.452, 694.935, 193.106, 694.405, 198.668, 676.924, 205.29, 676.13, 209.528, 689.903, 215.62, 694.935, 229.922, 690.432, 246.079, 697.849, 254.025, 706.059, 265.679, 703.411, 280.247, 694.14, 285.279, 679.573, 287.133, 674.54, 283.16, 657.854, 285.014, 653.881, 299.052, 643.816, 303.555, 634.016, 302.231, 619.978, 304.614, 610.973, 314.414, 594.286, 326.598, 596.405, 340.106, 593.491, 348.582, 592.432, 362.09, 587.664, 367.917, 581.572, 381.161, 563.297, 387.782, 546.08, 390.166, 540.518, 365.533, 527.275, 365.269, 509.794, 368.182, 489.929, 371.361, 474.037, 371.89, 456.026, 364.739, 442.783, 357.058, 440.134, 337.458, 429.01, 329.247, 424.242, 316.268, 433.248, 306.733, 425.037, 298.522, 424.772, 288.987, 430.069, 281.306, 445.696, 279.187, 441.723, 273.89, 426.626, 269.652, 417.091, 258.528, 419.21, 242.106, 418.415, 225.42, 418.578, 214.594, 412.405, 201.686, 419.139, 192.987, 435.415, 182.604, 434.293, 173.063, 448.043, 169.135, 455.058, 152.298, 465.16, 148.369, 469.65, 146.124, 465.722, 138.547, 471.895, 127.603, 485.365, 129.287, 493.222, 126.762, 497.431, 115.818, 508.656, 113.292, 511.743, 104.874, 523.528, 104.593, 530.263, 107.119, 531.105, 113.011, 538.682, 117.501, 543.733, 116.94, 545.136, 107.68 )
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="Lowlands"]
margin_left = 370.839
margin_top = 181.816
margin_right = 707.839
margin_bottom = 231.816
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Lowlands"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="ElarDesert" to="." method="gotoArea" binds= [ "ElarDesert" ]]
[connection signal="mouse_entered" from="ElarDesert" to="." method="enterArea" binds= [ "ElarDesert" ]]
[connection signal="mouse_exited" from="ElarDesert" to="." method="exitArea" binds= [ "ElarDesert" ]]
[connection signal="input_event" from="Owlshore" to="." method="gotoArea" binds= [ "Owlshore" ]]
[connection signal="mouse_entered" from="Owlshore" to="." method="enterArea" binds= [ "Owlshore" ]]
[connection signal="mouse_exited" from="Owlshore" to="." method="exitArea" binds= [ "Owlshore" ]]
[connection signal="input_event" from="Lowlands" to="." method="gotoArea" binds= [ "Lowlands" ]]
[connection signal="mouse_entered" from="Lowlands" to="." method="enterArea" binds= [ "Lowlands" ]]
[connection signal="mouse_exited" from="Lowlands" to="." method="exitArea" binds= [ "Lowlands" ]]
